fix: access to Item by direct link. Need to fix vert long tablet overflow

--- a/styles.css
+++ b/styles.css
@@ -261,7 +261,12 @@ dialog{
 .close-dialog-red-x {
     position:relative;
     text-align:center;
-}
+    font-weight: 600;
+    color:red;
+    transition:all 0.2s ease
+} .close-dialog-red-x:hover{
+    color:var(--milkChoc)
+  }
 
 
 .CartRoute-order-button{
